header section complete

--- a/index.html
+++ b/index.html
@@ -13,21 +13,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <title>FIFA World Cup</title>
-
-    <!-- Google Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
-
     <!-- Font Awesome -->
-    <!-- <script src="https://kit.fontawesome.com/0a1f6c0270.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/0a1f6c0270.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header class="container"></header>
+
+    <!-- -----------------------------------------------------------
+    --------------------- Header Section ---------------------------
+    ------------------------------------------------------------- -->
+
+    <header class="container">
+        <div class="flexible-container">
+            <div class="banner-text">
+                <div>
+                    <h1 id="banner-heading">The Greatest show on the earth</h1>
+                    <p id="banner-details">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                        roots in
+                        a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <button id="watch-live-btn" type="submit">Watch Live <i
+                            class="fa-solid fa-arrow-right-long"></i></button>
+                </div>
+            </div>
+
+            <div class="banner-image">
+                <img src="./images/banner-image.png" alt="Banner Image">
+            </div>
+        </div>
+    </header>
+
+
+
+
+
+
     <main class="container"></main>
     <footer></footer>
 </body>
