working with main section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     ------------------------------------------------------------- -->
 
     <header class="container">
-        <div class="flexible-container">
+        <div class="header-container">
             <div class="banner-text">
                 <div>
                     <h1 id="banner-heading">The Greatest show on the earth</h1>
@@ -44,12 +44,152 @@
         </div>
     </header>
 
+    <!-- -----------------------------------------------------------
+    --------------------- Main Section ---------------------------
+    ------------------------------------------------------------- -->
 
+    <main class="container">
+        <div class="main-container">
+            <aside class="left-nav">
+                <a href="#"><button>Upcoming Match</button></a>
+                <a href="#"><button>All Group</button></a>
+                <a href="#"><button>Blog</button></a>
+            </aside>
 
+            <div class="blog-cards">
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
 
-    <main class="container"></main>
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog-card">
+                    <div class="blog-thumbnail">
+                        <img src="./images/blog-image.png" alt="">
+                    </div>
+                    <div class="thumbnail-details">
+                        <button class="thumbnail-btn">Transfer</button>
+                        <h3 class="thumbnail-heading">Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="time-comment">
+                            <p><i class="fa-regular fa-clock"></i> 10h</p>
+                            <p><i class="fa-regular fa-message"></i> 23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- -----------------------------------------------------------
+    --------------------- Main Section ---------------------------
+    ------------------------------------------------------------- -->
+
     <footer></footer>
 </body>
 
