--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="container">
         <div class="header-container">
             <div class="banner-text">
-                <div>
+                <div class="center-align">
                     <h1 id="banner-heading">The Greatest show on the earth</h1>
                     <p id="banner-details">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
                         roots in
@@ -51,9 +51,9 @@
     <main class="container">
         <div class="main-container">
             <aside class="left-nav">
-                <a href="#"><button>Upcoming Match</button></a>
-                <a href="#"><button>All Group</button></a>
-                <a href="#"><button>Blog</button></a>
+                <button onclick="location.href='./upcoming-match.html'">Upcoming Match</button>
+                <button>All Group</button>
+                <button class="active" onclick="location.href='./index.html'">Blog</button>
             </aside>
 
             <div class="blog-cards">
@@ -187,10 +187,27 @@
     </main>
 
     <!-- -----------------------------------------------------------
-    --------------------- Main Section ---------------------------
+    --------------------- Footer Section ---------------------------
     ------------------------------------------------------------- -->
 
-    <footer></footer>
+    <footer>
+        <h2>FIFA World Cup</h2>
+        <div class="hr-line"></div>
+        <div class="footer-link-container">
+            <p><a href="#">Contact Us</a></p>
+            <p><a href="#">Terms of Service</a></p>
+            <p><a href="#">Privacy Policy</a></p>
+            <p><a href="#">Privacy Setting</a></p>
+            <p><a href="#">Goal App</a></p>
+            <p><a href="#">Goal Live</a></p>
+        </div>
+        <div class="social-link-container">
+            <a href="#"><img src="./images/facebook-icon.svg" alt="facebook"></a>
+            <a href="#"><img src="./images/twitter-icon.svg" alt="twitter"></a>
+            <a href="#"><img src="./images/linkedin-icon.svg" alt="linkedin"></a>
+            <a href="#"><img src="./images/github-icon.svg" alt="github"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
