--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -1,3 +1,9 @@
+<!-- 
+    Project Name: Fifa World Cup
+    Developer Name: Md. Shamim Sarker
+    Start Date: 19/07/2022
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,23 +13,143 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <title>FIFA World Cup</title>
-
-    <!-- Google Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> -->
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
-
     <!-- Font Awesome -->
-    <!-- <script src="https://kit.fontawesome.com/0a1f6c0270.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/0a1f6c0270.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header class="container"></header>
-    <main class="container"></main>
-    <footer></footer>
+
+    <!-- ----------------------------------------------------------- -->
+    <!-- --------------------- Header Section ---------------------- -->
+    <!-- ----------------------------------------------------------- -->
+
+    <header class="container">
+        <div class="header-container">
+            <div class="banner-text">
+                <div class="center-align">
+                    <h1 id="banner-heading">The Greatest show on the earth</h1>
+                    <p id="banner-details">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                        roots in
+                        a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <button id="watch-live-btn" type="submit">Watch Live <i
+                            class="fa-solid fa-arrow-right-long"></i></button>
+                </div>
+            </div>
+
+            <div class="banner-image">
+                <img src="./images/banner-image.png" alt="Banner Image">
+            </div>
+        </div>
+    </header>
+
+    <!-- ----------------------------------------------------------- -->
+    <!-- --------------------- Main Section ------------------------ -->
+    <!-- ----------------------------------------------------------- -->
+
+    <main class="container">
+        <div class="main-container">
+            <aside class="left-nav">
+                <button class="active" onclick="location.href='./upcoming-match.html'">Upcoming Match</button>
+                <button>All Group</button>
+                <button onclick="location.href='./index.html'">Blog</button>
+            </aside>
+
+            <div class="match-cards">
+                <div class="match-card">
+                    <div class="match-thumbnail">
+                        <img src="./images/germany-flag.png" alt="Germany Flag">
+                        <p>VS</p>
+                        <img src="./images/france-flag.png" alt="France Flag">
+                    </div>
+                    <div class="match-thumbnail-details">
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match-card">
+                    <div class="match-thumbnail">
+                        <img src="./images/germany-flag.png" alt="Germany Flag">
+                        <p>VS</p>
+                        <img src="./images/france-flag.png" alt="France Flag">
+                    </div>
+                    <div class="match-thumbnail-details">
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match-card">
+                    <div class="match-thumbnail">
+                        <img src="./images/germany-flag.png" alt="Germany Flag">
+                        <p>VS</p>
+                        <img src="./images/france-flag.png" alt="France Flag">
+                    </div>
+                    <div class="match-thumbnail-details">
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match-card">
+                    <div class="match-thumbnail">
+                        <img src="./images/germany-flag.png" alt="Germany Flag">
+                        <p>VS</p>
+                        <img src="./images/france-flag.png" alt="France Flag">
+                    </div>
+                    <div class="match-thumbnail-details">
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match-card">
+                    <div class="match-thumbnail">
+                        <img src="./images/germany-flag.png" alt="Germany Flag">
+                        <p>VS</p>
+                        <img src="./images/france-flag.png" alt="France Flag">
+                    </div>
+                    <div class="match-thumbnail-details">
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+                <div class="match-card">
+                    <div class="match-thumbnail">
+                        <img src="./images/germany-flag.png" alt="Germany Flag">
+                        <p>VS</p>
+                        <img src="./images/france-flag.png" alt="France Flag">
+                    </div>
+                    <div class="match-thumbnail-details">
+                        <h2>Germany VS France</h2>
+                        <p>April 01, 2023, 1.00 AM</p>
+                    </div>
+                </div>
+            </div>
+
+
+    </main>
+
+    <!-- ----------------------------------------------------------- -->
+    <!-- --------------------- Footer Section ---------------------- -->
+    <!-- ----------------------------------------------------------- -->
+
+    <footer>
+        <h2>FIFA World Cup</h2>
+        <div class="hr-line"></div>
+        <div class="footer-link-container">
+            <p><a href="#">Contact Us</a></p>
+            <p><a href="#">Terms of Service</a></p>
+            <p><a href="#">Privacy Policy</a></p>
+            <p><a href="#">Privacy Setting</a></p>
+            <p><a href="#">Goal App</a></p>
+            <p><a href="#">Goal Live</a></p>
+        </div>
+        <div class="social-link-container">
+            <a href="#"><img src="./images/facebook-icon.svg" alt="facebook"></a>
+            <a href="#"><img src="./images/twitter-icon.svg" alt="twitter"></a>
+            <a href="#"><img src="./images/linkedin-icon.svg" alt="linkedin"></a>
+            <a href="#"><img src="./images/github-icon.svg" alt="github"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
