--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
 
-    <!-- -----------------------------------------------------------
-    --------------------- Header Section ---------------------------
-    ------------------------------------------------------------- -->
+    <!-- ----------------------------------------------------------- -->
+    <!-- --------------------- Header Section ---------------------- -->
+    <!-- ----------------------------------------------------------- -->
 
     <header class="container">
         <div class="header-container">
@@ -44,9 +44,9 @@
         </div>
     </header>
 
-    <!-- -----------------------------------------------------------
-    --------------------- Main Section ---------------------------
-    ------------------------------------------------------------- -->
+    <!-- ----------------------------------------------------------- -->
+    <!-- --------------------- Main Section ------------------------ -->
+    <!-- ----------------------------------------------------------- -->
 
     <main class="container">
         <div class="main-container">
@@ -59,7 +59,7 @@
             <div class="blog-cards">
                 <div class="blog-card">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -73,7 +73,7 @@
 
                 <div class="blog-card">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -87,7 +87,7 @@
 
                 <div class="blog-card">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -101,7 +101,7 @@
 
                 <div class="blog-card">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -115,7 +115,7 @@
 
                 <div class="blog-card">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -129,7 +129,7 @@
 
                 <div class="blog-card">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -141,9 +141,9 @@
                     </div>
                 </div>
 
-                <div class="blog-card">
+                <div class="blog-card hidden">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -155,9 +155,9 @@
                     </div>
                 </div>
 
-                <div class="blog-card">
+                <div class="blog-card hidden">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -169,9 +169,9 @@
                     </div>
                 </div>
 
-                <div class="blog-card">
+                <div class="blog-card hidden">
                     <div class="blog-thumbnail">
-                        <img src="./images/blog-image.png" alt="">
+                        <img src="./images/blog-image.png" alt="blog">
                     </div>
                     <div class="thumbnail-details">
                         <button class="thumbnail-btn">Transfer</button>
@@ -184,11 +184,15 @@
                 </div>
             </div>
         </div>
+
+        <div id="view-all-btn">
+            <button>View All</button>
+        </div>
     </main>
 
-    <!-- -----------------------------------------------------------
-    --------------------- Footer Section ---------------------------
-    ------------------------------------------------------------- -->
+    <!-- ----------------------------------------------------------- -->
+    <!-- --------------------- Footer Section ---------------------- -->
+    <!-- ----------------------------------------------------------- -->
 
     <footer>
         <h2>FIFA World Cup</h2>
