--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!-- 
+<!-- ================================
     Project Name: Fifa World Cup
     Developer Name: Md. Shamim Sarker
     Start Date: 19/07/2022
- -->
+ ==================================== -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,18 +13,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <title>FIFA World Cup</title>
-    <!-- Stylesheet -->
+
+    <!-- ======================== Stylesheet ================================ -->
     <link rel="stylesheet" href="./styles/style.css">
-    <!-- Font Awesome -->
+
+    <!-- ======================== Font Awesome ============================== -->
     <script src="https://kit.fontawesome.com/0a1f6c0270.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-    <!-- ----------------------------------------------------------- -->
-    <!-- --------------------- Header Section ---------------------- -->
-    <!-- ----------------------------------------------------------- -->
-
+    <!--====================================================================
+        ============================= Header Section =======================
+        ==================================================================== -->
     <header class="container">
         <div class="header-container">
             <div class="banner-text">
@@ -34,7 +34,7 @@
                         roots in
                         a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                     <button id="watch-live-btn" type="submit">Watch Live <i
-                            class="fa-solid fa-arrow-right-long"></i></button>
+                            class="fa-solid fa-circle-arrow-right"></i></button>
                 </div>
             </div>
 
@@ -44,9 +44,9 @@
         </div>
     </header>
 
-    <!-- ----------------------------------------------------------- -->
-    <!-- --------------------- Main Section ------------------------ -->
-    <!-- ----------------------------------------------------------- -->
+    <!--====================================================================
+        ============================= Main Section =========================
+        ==================================================================== -->
 
     <main class="container">
         <div class="main-container">
@@ -190,9 +190,9 @@
         </div>
     </main>
 
-    <!-- ----------------------------------------------------------- -->
-    <!-- --------------------- Footer Section ---------------------- -->
-    <!-- ----------------------------------------------------------- -->
+    <!--====================================================================
+        ============================= Footer Section =======================
+        ==================================================================== -->
 
     <footer>
         <h2>FIFA World Cup</h2>
@@ -209,7 +209,6 @@
             <a href="#"><img src="./images/facebook-icon.svg" alt="facebook"></a>
             <a href="#"><img src="./images/twitter-icon.svg" alt="twitter"></a>
             <a href="#"><img src="./images/linkedin-icon.svg" alt="linkedin"></a>
-            <a href="#"><img src="./images/github-icon.svg" alt="github"></a>
         </div>
     </footer>
 </body>
