--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -1,8 +1,8 @@
-<!-- 
+<!-- ================================
     Project Name: Fifa World Cup
     Developer Name: Md. Shamim Sarker
     Start Date: 19/07/2022
- -->
+ ==================================== -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -13,17 +13,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <title>FIFA World Cup</title>
-    <!-- Stylesheet -->
+
+    <!-- ======================== Stylesheet ================================ -->
     <link rel="stylesheet" href="./styles/style.css">
-    <!-- Font Awesome -->
+
+    <!-- ======================== Font Awesome ============================== -->
     <script src="https://kit.fontawesome.com/0a1f6c0270.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <!-- ----------------------------------------------------------- -->
-    <!-- --------------------- Header Section ---------------------- -->
-    <!-- ----------------------------------------------------------- -->
+    <!--====================================================================
+        ============================= Header Section =======================
+        ==================================================================== -->
 
     <header class="container">
         <div class="header-container">
@@ -44,9 +46,9 @@
         </div>
     </header>
 
-    <!-- ----------------------------------------------------------- -->
-    <!-- --------------------- Main Section ------------------------ -->
-    <!-- ----------------------------------------------------------- -->
+    <!--====================================================================
+        ============================= Main Section =========================
+        ==================================================================== -->
 
     <main class="container">
         <div class="main-container">
@@ -124,13 +126,13 @@
                     </div>
                 </div>
             </div>
-
+        </div>
 
     </main>
 
-    <!-- ----------------------------------------------------------- -->
-    <!-- --------------------- Footer Section ---------------------- -->
-    <!-- ----------------------------------------------------------- -->
+    <!--====================================================================
+        ============================= Footer Section =======================
+        ==================================================================== -->
 
     <footer>
         <h2>FIFA World Cup</h2>
@@ -147,7 +149,6 @@
             <a href="#"><img src="./images/facebook-icon.svg" alt="facebook"></a>
             <a href="#"><img src="./images/twitter-icon.svg" alt="twitter"></a>
             <a href="#"><img src="./images/linkedin-icon.svg" alt="linkedin"></a>
-            <a href="#"><img src="./images/github-icon.svg" alt="github"></a>
         </div>
     </footer>
 </body>
