--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>FIFA World Cup</title>
 
     <!-- ======================== Stylesheet ================================ -->
@@ -135,6 +136,7 @@
         ==================================================================== -->
 
     <footer>
+        <img src="./images/logo.png" alt="logo">
         <h2>FIFA World Cup</h2>
         <div class="hr-line"></div>
         <div class="footer-link-container">
