delete unnessesary things

--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -33,9 +33,11 @@
             <div class="banner-text">
                 <div class="center-align">
                     <h1 id="banner-heading">The Greatest show on the earth</h1>
-                    <p id="banner-details">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                        roots in
-                        a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p id="banner-details">The <abbr
+                            title="International Federation of Association Football">FIFA</abbr> World Cup is an
+                        international
+                        association football competition contested by the senior men's national teams of the members of
+                        the FIFA, the sport's global governing body.</p>
                     <button id="watch-live-btn" type="submit">Watch Live <i
                             class="fa-solid fa-arrow-right-long"></i></button>
                 </div>
@@ -148,9 +150,9 @@
             <p><a href="#">Goal Live</a></p>
         </div>
         <div class="social-link-container">
-            <a href="#"><img src="./images/facebook-icon.svg" alt="facebook"></a>
-            <a href="#"><img src="./images/twitter-icon.svg" alt="twitter"></a>
-            <a href="#"><img src="./images/linkedin-icon.svg" alt="linkedin"></a>
+            <a href="https://web.facebook.com/shamimspro"><img src="./images/facebook-icon.svg" alt="facebook"></a>
+            <a href="https://twitter.com/shamimspro"><img src="./images/twitter-icon.svg" alt="twitter"></a>
+            <a href="https://www.linkedin.com/in/shamimspro/"><img src="./images/linkedin-icon.svg" alt="linkedin"></a>
         </div>
     </footer>
 </body>
